# threefirenovel

./: .gitignore  build.bat  dev.bat  implementation_plan.md  index.html  package-lock.json  package.json  start-agent.bat  vite.config.ts
.github/workflows/: build-macos-release.yml
agent/: db.py  generate_icons.py  main.py  migrate_db.py  requirements.txt  test_butterfly.py
agent/agents/: default_prompts.py  llm.py  prompts.py  router.py  workflow.py
agent/api/: agents_chat.py  beats.py  butterfly.py  chapters.py  characters.py  conflict.py  content.py  debate_room.py  graph.py  knowledge.py  ner.py  pipeline.py  projects.py  settings.py
agent/memory/: __init__.py  agent_dream.py  chunk_manager.py  epa_analyzer.py  meta_thinking.py
agent/rag/: search.py
agent/scripts/: regression_ai_single_character.py  regression_bootstrap_character_alias_mapping.py  regression_bootstrap_character_parse_failure.py  regression_bootstrap_character_topup.py  regression_bootstrap_outline_character_alignment.py  regression_import_graph_smoke.py  regression_knowledge_pipeline.py  regression_memory_path.py
database/: schema.sql
database/migrations/: 001_beats.sql  002_story_bibles.sql  003_memory_chunks_alignment.sql  004_knowledge_profiles.sql  005_knowledge_collections_and_refs.sql  006_global_knowledge_templates.sql  007_planning_studio_states.sql  (+9 more)
docs/: macos-release.md
scripts/: prepare_python_embed.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
(+57 files in other folders)
