[package]
name = "sanhuoai"
version = "0.1.0"
edition = "2021"

[lib]
name = "sanhuoai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs-next = "2.0"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
